correction du bug de la navbar, à cause du overflow x

--- a/assets/styles/components/_settings.scss
+++ b/assets/styles/components/_settings.scss
@@ -3,7 +3,6 @@ $text : #EFE7DA;
 
 * {
     // background-color: #041E2A;
-    overflow-x: hidden;
 }
 
 body {
